Add browser compatibility detection and documentation
Introduces feature detection via js/utils/feature-detection.js and integrates it into the app. Adds browser-test.html for interactive compatibility testing. Updates docs/README.md and adds docs/browser-compatibility.md with detailed browser support information. Exposes debugBrowserSupport globally and updates package.json with related scripts.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint:fix": "npx eslint js/**/*.js --fix",
     "format": "npx prettier --write \"**/*.{js,html,css,md}\"",
     "test": "npx vitest",
+    "test:browser": "npx live-server --port=3000 --open=/browser-test.html",
     "serve": "npx live-server --port=3000",
     "clean": "rm -rf dist/",
-    "validate": "npm run lint && npm run test"
+    "validate": "npm run lint && npm run test",
+    "compatibility-check": "echo 'Open browser and run: window.debugBrowserSupport()'"
   },
   "keywords": [
     "meetup",
